--- a/login.html
+++ b/login.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Student Service System</title>
+<title>Admin Dashboard</title>
 <base target="_top">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-     <link rel="icon" href="https://static.wixstatic.com/media/a503e5_dcefff2c05f14dc0b989b3ae8e6972a5~mv2.png">
+     <link rel="icon" href="https://static.wixstatic.com/media/049a4c_e518fda1441040839e95f3e34e7edf77~mv2.png">
 </head>
-
 <div align="center">
 <iframe src="https://script.google.com/macros/s/AKfycbxdF2HCsB06y0R3C01UY5HfIHxkUcnJqf_j5pETsVuXGlY1QFkcSqtt7dItdO0K97Kt/exec" 
 
